Bug 64354 - Should not claim X-TELEPATHY-PASSWORD mech is supported if username is unknown
Summary: Should not claim X-TELEPATHY-PASSWORD mech is supported if username is unknown
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: tp-spec (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Simon McVittie
QA Contact: Telepathy bugs list
URL:
Whiteboard: review?
Keywords: patch
Depends on:
Blocks:
 
Reported: 2013-05-08 11:13 UTC by Xavier Claessens
Modified: 2014-09-17 11:27 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
X-TELEPATHY-PASSWORD is not mandatory if unimplementable (1.60 KB, patch)
2014-01-07 14:30 UTC, Simon McVittie
Details | Splinter Review

Description Xavier Claessens 2013-05-08 11:13:17 UTC
The X-TELEPATHY-PASSWORD pseudo mechanism needs the username, so if it is not known, don't pretend we support it.

When creating a gtalk account in GOA/UOA the account parameter is set to "google.com", without the username part. In that case gabble should not claim that X-TELEPATHY-PASSWORD is supported. SASL channel handler must use google's oauth mech or even PLAIN if it can provide the username/password.
Comment 1 Simon McVittie 2013-05-08 11:37:46 UTC
Should we also change telepathy-spec? At the moment it says

> To make it possible to implement a very simple
> password-querying user interface without knowledge of any
> particular SASL mechanism, implementations of this interface
> MUST implement the pseudo-mechanism X-TELEPATHY-PASSWORD,
> unless none of the available mechanisms use a password at all.

This should probably be "... unless each of the available mechanisms either requires additional information beyond the password (such as a username), or does not use a password".
Comment 2 Simon McVittie 2013-05-08 11:38:58 UTC
Patch looks good, though.
Comment 3 Xavier Claessens 2013-05-08 12:10:49 UTC
Patch merged. Reassigning the bug to spec if someone cares :)
Comment 4 Simon McVittie 2014-01-07 14:30:02 UTC
Created attachment 91602 [details] [review]
X-TELEPATHY-PASSWORD is not mandatory if unimplementable

Gabble (correctly) doesn't implement it if you use
{ "account": "gmail.com" }, which is not enough for X-TELEPATHY-PASSWORD:
a mechanism that provides a username, such as PLAIN or Google's OAuth
dialect, must be used here.

---

I suggested spec text > 6 months ago. Here it is as a patch.
Comment 5 Guillaume Desmottes 2014-01-07 16:02:56 UTC
Comment on attachment 91602 [details] [review]
X-TELEPATHY-PASSWORD is not mandatory if unimplementable

Review of attachment 91602 [details] [review]:
-----------------------------------------------------------------

++
Comment 6 Simon McVittie 2014-09-17 11:27:10 UTC
Fixed in git for 0.27.4 and 0.99.12, thanks


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.