X-TELEPATHY-PASSWORD is not supported if username isn't known

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=64354